--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
-      <script type="module" crossorigin src="/assets/index.e20b55fa.js"></script>
-      <link rel="stylesheet" href="/assets/index.7826e456.css">
+        <title>Joey Tan</title>
+      <script type="module" crossorigin src="/assets/index.ae707d01.js"></script>
+      <link rel="stylesheet" href="/assets/index.357fcbf4.css">
     </head>
     <body>
         <div id="app"></div>
