--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="" />
+        <link rel="shortcut icon" href="/assets/favicon.321ca5bf.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Joey Tan</title>
       <script type="module" crossorigin src="/assets/index.154f2c54.js"></script>
