--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="" />
+        <link rel="shortcut icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Joey Tan</title>
-      <script type="module" crossorigin src="/assets/index.f5041a05.js"></script>
-      <link rel="stylesheet" href="/assets/index.93905c42.css">
+      <script type="module" crossorigin src="/assets/index.7eb38912.js"></script>
+      <link rel="stylesheet" href="/assets/index.c13d7c87.css">
     </head>
     <body>
         <div id="app"></div>
