--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="shortcut icon" href="/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Joey Tan</title>
-      <script type="module" crossorigin src="/assets/index.7eb38912.js"></script>
-      <link rel="stylesheet" href="/assets/index.c13d7c87.css">
-    </head>
-    <body>
-        <div id="app"></div>
-        
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="apple-touch-icon" href="/favicon.png"/><link rel="manifest" href="/manifest.json"/><title>Joey Tan</title><script defer="defer" src="/static/js/main.73d233f2.js"></script><link href="/static/css/main.b2928228.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
